--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,24 +12,35 @@
         <p>Apellidos:<span th:text="${cliente.apellidos}"></span></p>
         <p>Correo:<span th:text="${cliente.correo}"></span></p>
         <p>Teléfono:<span th:text="${cliente.telefono}"></span></p> -->
-      <h1>Clientes</h1>
-      <table border="1">
-          <thead>
-          <th>Nombre</th>
-          <th>Apellidos</th>
-          <th>Correo</th>
-          <th>Teléfono</th>
-      </thead>
-      <tbody>
-          <tr th:each="cliente: ${clientes}">
-                  <td th:text="${cliente.nombre}"></td>
-                  <td th:text="${cliente.apellidos}"></td>
-                  <td th:text="${cliente.correo}"></td>
-                  <td th:text="${cliente.telefono}"></td>             
-          </tr>
-      </tbody>
-              
-         
-      </table>
+      <header th:replace="layout/plantilla :: header" />
+      <h2>Clientes</h2>
+      <a th:href="@{/nuevoCliente}">Nuevo Cliente</a>  
+      <br/> 
+      <div th:if="${clientes != null and !clientes.empty}">
+      <br/>     
+          <table border="1">
+              <thead>
+              <th>Nombre</th>
+              <th>Apellidos</th>
+              <th>Correo</th>
+              <th>Teléfono</th>
+              <th colspan="2">Acciones</th>
+              </thead>
+              <tbody>
+                  <tr th:each="cliente: ${clientes}">
+                      <td th:text="${cliente.nombre}"></td>
+                      <td th:text="${cliente.apellidos}"></td>
+                      <td th:text="${cliente.correo}"></td>
+                      <td th:text="${cliente.telefono}"></td>       
+                      <td><a th:href="@{/modificarCliente/}+ ${cliente.idCliente}">Modificar</a></td>
+                      <td><a th:href="@{/eliminarCliente/}+ ${cliente.idCliente}">Eliminar</a></td>
+                  </tr>
+              </tbody> 
+          </table>
+      </div>
+      <div th:if="${clientes == null or clientes.empty}">
+          La lista de clientes está vacía...
+      </div>
+      <footer th:replace="layout/plantilla :: footer">
     </body>
 </html>
