--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,46 +1,38 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+S<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
+        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <!-- <div>Saludos</div><p th:text="${MensajeSaludo}"></p>
-        <p th:text="${fecha}"></p>-->
-      <!--  <h1>Un Cliente</h1>
-        <p>Nombre:<span th:text="${cliente.nombre}"></span></p>
-        <p>Apellidos:<span th:text="${cliente.apellidos}"></span></p>
-        <p>Correo:<span th:text="${cliente.correo}"></span></p>
-        <p>Teléfono:<span th:text="${cliente.telefono}"></span></p> -->
       <header th:replace="layout/plantilla :: header" />
-      <h2>Clientes</h2>
-      <a th:href="@{/nuevoCliente}">Nuevo Cliente</a>  
-      <br/> 
-      <div th:if="${clientes != null and !clientes.empty}">
-      <br/>     
-          <table border="1">
-              <thead>
-              <th>Nombre</th>
-              <th>Apellidos</th>
-              <th>Correo</th>
-              <th>Teléfono</th>
-              <th colspan="2">Acciones</th>
-              </thead>
-              <tbody>
-                  <tr th:each="cliente: ${clientes}">
-                      <td th:text="${cliente.nombre}"></td>
-                      <td th:text="${cliente.apellidos}"></td>
-                      <td th:text="${cliente.correo}"></td>
-                      <td th:text="${cliente.telefono}"></td>       
-                      <td><a th:href="@{/modificarCliente/}+ ${cliente.idCliente}">Modificar</a></td>
-                      <td><a th:href="@{/eliminarCliente/}+ ${cliente.idCliente}">Eliminar</a></td>
-                  </tr>
-              </tbody> 
-          </table>
-      </div>
-      <div th:if="${clientes == null or clientes.empty}">
-          La lista de clientes está vacía...
-      </div>
+      <div class="contenido">
+           <h2>Nuestros Articulos</h2>
+           <br/>
+           <div th:if="${articulos != null and !articulos.empty}">   
+               <table border="1">
+                   <thead>
+                       <tr>
+                           <th>Descripción</th>
+                           <th>Precio</th>
+                           <th>Comprar</th>
+                       </tr>
+                   </thead>
+                   <tbody>
+                       <tr th:each="articulo: ${articulos}">
+                           <td th:text="${articulo.descripcion}"></td>
+                           <td th:text="${articulo.precio}"></td>
+                           <td><a th:href="@{/carrito/agregar/} + ${articulo.idArticulo}">Agregar</a></td>
+                       </tr>
+                   </tbody> 
+               </table>
+            </div>
+            <div th:if="${articulos == null or articulos.empty}">
+                No tenemos articulos que mostrar...
+            </div>
+        </div>
       <footer th:replace="layout/plantilla :: footer">
     </body>
 </html>
