--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
+    <head>  
+    <title>TechShop</title>   
+    <meta charset="UTF-8">   
     </head>
-    <body>
-        <header th:fragment="header">
-            <h1 style="color: purple;">TechShop</h1>
-        </header>
-        <footer th:fragment="footer">
-            <p style="font-size: 20px">&COPY; Derechos Reservados 2023</p>
-        </footer>
+    <body>  
+    <header th:fragment="header" class="header">  
+        <nav class="nav">           
+            <a th:href="@{/}" class="logo nav-link">TechShop</a>        
+            <ul class="nav-menu">                
+                <li class="nav-menu-item">       
+                    <a th:href="@{/cliente/listado}" class="nav-menu-link nav-link">Clientes</a>      
+                </li>     
+                
+                <li class="nav-menu-item">                     
+                    <a th:href="@{/categoria/listado}" class="nav-menu-link nav-link">Categorias</a> 
+                </li>        
+                <li class="nav-menu-item">     
+                    <a th:href="@{/articulo/listado}" class="nav-menu-link nav-link">Articulos</a>    
+                </li>          
+            </ul>           
+        </nav>      
+    </header>    
+        
+    <footer th:fragment="footer" class="footer">        
+        <p style="font-size: 20px;">&COPY; Derechos Reservados 2023</p>   
+    </footer>   
     </body>
 </html>
 
