--- a/src/main/resources/templates/cliente/buscar.html
+++ b/src/main/resources/templates/cliente/buscar.html
@@ -8,36 +8,36 @@
     <body> 
             <header th:replace="layout/plantilla :: header"/>   
             <br/>
-            <h1>Ingrese el nombre y apellido del cliente:</h1> 
+            <h1 th:text="#{cliente.buscar}">Ingrese el nombre y apellido del cliente</h1> 
             <br/>   
             <form th:action="@{/cliente/buscar}"
                   method="POST"
                   th:object="${cliente}">
-                <label for="nombre">Nombre</label></br>
+                <label for="nombre" th:text="#{cliente.nombre}">Nombre</label></br>
                 <input type="text" name="nombre" th:field="*{nombre}"/></br>
-                <label for="apellido">Apellido</label></br>
+                <label for="apellido" th:text="#{cliente.apellidos}">Apellido</label></br>
                 <input type="text" name="apellidos" th:field="*{apellidos}"/></br>
                 <br/> 
-                <input type="submit" name="Buscar" th:value="Buscar"/></br>
+                <input type="submit" name="Buscar" th:value="#{accion.buscar}"/></br>
                 </br>
-                <h2>-Resultado de busqueda-</h2>
+                <h2 th:text="#{cliente.resultado}">-Resultado de busqueda-</h2>
             </form>
             <div th:if="${clientes != null}"> 
                 <div th:if="${clientes != clientes.empty}">
                   <br/>     
                     <table border="1"> 
                         <thead>        
-                        <th>Nombre</th>  
-                        <th>Apellido</th>      
-                        <th>Correo</th>             
-                        <th>Telefono</th>            
-                        <th>Limite</th>        
+                        <th th:text="#{cliente.nombre}">Nombre</th>  
+                        <th th:text="#{cliente.apellidos}">Apellido</th>      
+                        <th th:text="#{cliente.correo}">Correo</th>             
+                        <th th:text="#{cliente.telefono}">Telefono</th>            
+                        <th th:text="#{cliente.limite}">Limite</th>        
                         </thead>             
                         <tbody>                     
                             <tr th:each="cliente : ${clientes}">      
                                 <td th:text="${cliente.nombre}"></td>  
                                 <td th:text="${cliente.apellidos}"></td>    
-                                <td th:text="${cliente.correo}"></td>     
+                                <td th:text="${cliente.correo}" ></td>     
                                 <td th:text="${cliente.telefono}"></td>  
                                 <td th:text="${#numbers.formatDecimal(cliente.credito.limite, 3, 2)}"></td>  
                             </tr>              
@@ -46,7 +46,7 @@
                 </div> 
                 <br/> 
                 <div th:if="${clientes == null or clientes.empty}"> 
-                    Cliente no encontrado...
+                    <p th:text="#{cliente.no_encontrado}">Cliente no encontrado...</p>
                 </div>  
             </div> 
     </body> 
