--- a/src/main/resources/templates/articulo/listado.html
+++ b/src/main/resources/templates/articulo/listado.html
@@ -11,17 +11,17 @@
         <header th:replace="layout/plantilla :: header"/>    
         <div class="contenido">       
             <br/>
-            <h2>Listado de Articulos</h2> 
+            <h2 th:text="#{articulo.titulo}">Listado de Articulos</h2> 
             <br/> 
-            <a th:href="@{/articulo/nuevo}">Nuevo Articulo</a>           
+            <a th:href="@{/articulo/nuevo}" th:text="#{articulo.nuevo}">Nuevo Articulo</a>           
             <div th:if="${articulos != null and !articulos.empty}"> 
                 <table border="1">                
                     <thead>  
                         <tr>
-                            <th>Descripcion</th>     
-                            <th>Precio</th>  
-                            <th>Existencias</th>     
-                            <th>Activa</th>  
+                            <th th:text="#{articulo.descripcion}">Descripcion</th>     
+                            <th th:text="#{articulo.precio}">Precio</th>  
+                            <th th:text="#{articulo.existencias}">Existencias</th>     
+                            <th th:text="#{articulo.activo}">Activo</th>  
                         </tr>        
                     </thead>            
                     <tbody>            
@@ -30,14 +30,14 @@
                             <td th:text="${#numbers.formatDecimal(articulo.precio,3,2)}" style="text-align: right"></td>  
                             <td th:text="${articulo.existencias}" style="text-align: center"></td>     
                             <td><input type="checkbox" name="activo" th:checked="${articulo.activo}" disabled="true"></td>
-                            <td><a th:href="@{/articulo/modificar/} + ${articulo.idArticulo}">Modificar</a></td>
-                            <td><a th:href="@{/articulo/eliminar/} + ${articulo.idArticulo}">Eliminar</a></td>
+                            <td><a th:href="@{/articulo/modificar/} + ${articulo.idArticulo}" th:text="#{accion.actualizar}">Actualizar</a></td>
+                            <td><a th:href="@{/articulo/eliminar/} + ${articulo.idArticulo}" th:text="#{accion.eliminar}">Eliminar</a></td>
                         </tr>  
                     </tbody>         
                 </table>         
             </div>       
-            <div th:if="${articulos == null or articulos.empty}">      
-                No tenemos articulos que mostrar...
+            <div th:if="${articulos == null or articulos.empty}"> 
+                <p th:text="#{articulo.no_mostrar}">No tenemos articulos que mostrar...</p>
             </div>     
         </div>     
         <footer th:replace="layout/plantilla :: footer" />   
