--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -10,29 +10,29 @@
         <header th:replace="layout/plantilla :: header"/>    
         <div class="contenido">       
             <br/>
-            <h2>Listado de Categorías</h2> 
+            <h2 th:text="#{categoria.titulo}">Listado de Categorías</h2> 
             <br/> 
-            <a th:href="@{/categoria/nuevo}">Nueva Categoría</a>           
+            <a th:href="@{/categoria/nuevo}" th:text="#{categoria.nuevo}">Nueva Categoría</a>           
             <div th:if="${categorias != null and !categorias.empty}"> 
                 <table border="1">                
                     <thead>   
                         <tr>
-                            <th>Descripcion</th>     
-                            <th>Activa</th>  
+                            <th th:text="#{categoria.descripcion}">Descripcion</th>     
+                            <th th:text="#{categoria.activo}">Activo</th>  
                         </tr>        
                     </thead>            
                     <tbody>            
                         <tr th:each="categoria : ${categorias}">    
                             <td th:text="${categoria.descripcion}"></td>     
                             <td><input type="checkbox" name="activo" th:checked="${categoria.activo}" disabled="true"></td>                              
-                            <td><a th:href="@{/categoria/modificar/} + ${categoria.idCategoria}">Modificar</a></td>  
-                            <td><a th:href="@{/categoria/eliminar/} + ${categoria.idCategoria}">Eliminar</a></td>   
+                            <td><a th:href="@{/categoria/modificar/} + ${categoria.idCategoria}" th:text="#{accion.actualizar}">Actualizar</a></td>  
+                            <td><a th:href="@{/categoria/eliminar/} + ${categoria.idCategoria}" th:text="#{accion.eliminar}">Eliminar</a></td>   
                         </tr>  
                     </tbody>         
                 </table>         
             </div>       
-            <div th:if="${categorias == null or categorias.empty}">      
-                No tenemos categorías que mostrar...
+            <div th:if="${categorias == null or categorias.empty}">  
+                <p th:text="#{categoria.no_mostrar}">No tenemos categorías que mostrar...</p>
             </div>     
         </div>     
         <footer th:replace="layout/plantilla :: footer" />   
