--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -11,21 +11,21 @@
         <header th:replace="layout/plantilla :: header"/>    
         <div class="contenido">       
             <br/>
-            <h2>Listado de clientes</h2> 
+            <h2 th:text="#{cliente.titulo}">Listado de clientes</h2> 
             <br/> 
-            <a th:href="@{/cliente/nuevo}">Nuevo Cliente</a>
-            <a th:href="@{/cliente/buscar}">Listar Cliente</a>           
+            <a th:href="@{/cliente/nuevo}" th:text="#{cliente.nuevo}">Nuevo Cliente</a>
+            <a th:href="@{/cliente/buscar}" th:text="#{accion.listar}">Listar Cliente</a>           
             <div th:if="${clientes != null and !clientes.empty}"> 
                 <table border="1">                
                     <thead>      
                         <tr>
-                            <th>Nombre</th>     
-                            <th>Apellidos</th>  
-                            <th>Correo</th>     
-                            <th>Teléfono</th>  
-                            <th>Límite</th>    
-                            <th>Eliminar</th>    
-                            <th>Modificar</th>  
+                            <th th:text="#{cliente.nombre}">Nombre</th>     
+                            <th th:text="#{cliente.apellidos}">Apellidos</th>  
+                            <th th:text="#{cliente.correo}">Correo</th>     
+                            <th th:text="#{cliente.telefono}">Teléfono</th>  
+                            <th th:text="#{cliente.limite}">Límite</th>    
+                            <th th:text="#{accion.eliminar}">Eliminar</th>    
+                            <th th:text="#{accion.actualizar}">Actualizar</th>  
                         </tr>
                     </thead>            
                     <tbody>            
@@ -34,15 +34,15 @@
                             <td th:text="${cliente.apellidos}"></td>  
                             <td th:text="${cliente.correo}"></td>       
                             <td th:text="${cliente.telefono}"></td>          
-                            <td th:text="${#numbers.formatDecimal(cliente.credito.limite, 3, 2)}" style="text-align: right"></td>                           
-                            <td><a th:href="@{/cliente/modificar/} + ${cliente.idCliente}">Modificar</a></td>  
-                            <td><a th:href="@{/cliente/eliminar/} + ${cliente.idCliente}">Eliminar</a></td>   
+                            <td th:text="${#numbers.formatDecimal(cliente.credito.limite, 3, 2)}" style="text-align: right"></td>       
+                            <td><a th:href="@{/cliente/eliminar/} + ${cliente.idCliente}" th:text="#{accion.eliminar}">Eliminar</a></td>  
+                            <td><a th:href="@{/cliente/modificar/} + ${cliente.idCliente}" th:text="#{accion.actualizar}">Actualizar</a></td>  
                         </tr>  
                     </tbody>         
                 </table>         
             </div>       
             <div th:if="${clientes == null or clientes.empty}">      
-                La lista de clientes está vacía...
+                <p th:text="#{cliente.no_mostrar}">No hay clientes</p>
             </div>     
         </div>     
         <footer th:replace="layout/plantilla :: footer" />   
