--- a/src/main/resources/templates/cliente/modificar.html
+++ b/src/main/resources/templates/cliente/modificar.html
@@ -10,26 +10,26 @@
     <body> 
         <header th:replace="layout/plantilla :: header"/>    
         <div class="contenido">       
-            <h2>Datos del cliente</h2>
+            <h2 th:text="#{cliente.datos}">Datos del cliente</h2>
             <br/>
-            <a th:href="@{/cliente/listado}">Regresar</a>
+            <a th:href="@{/cliente/listado}" th:text="#{accion.regresar}">Regresar</a>
             <br/>
             <br/>
             <form th:action="@{/cliente/guardar}"
                   method="POST"
                   th:object="${cliente}">
                 <input type="hidden" name="idCliente" th:field="*{idCliente}" />
-                <label for="nombre">Nombre:</label><br/> 
+                <label for="nombre" th:text="#{cliente.nombre}">Nombre:</label><br/> 
                 <input type="text" name="nombre" th:field="*{nombre}" /><br/>        
-                <label for="apellidos">Apellidos:</label><br/>           
+                <label for="apellidos" th:text="#{cliente.apellidos}">Apellidos:</label><br/>           
                 <input type="text" name="apellidos" th:field="*{apellidos}" /><br/>  
-                <label for="correo">Correo:</label><br/>
+                <label for="correo" th:text="#{cliente.correo}">Correo:</label><br/>
                 <input type="email" name="correo" th:field="*{correo}" /><br/>      
-                <label for="telefono">Telefono:</label><br/>
+                <label for="telefono" th:text="#{cliente.telefono}">Telefono:</label><br/>
                 <input type="tel" name="telefono" th:field="*{telefono}" /><br/>      
-                <label for="limite">Límite de crédito:</label><br/>
+                <label for="limite" th:text="#{cliente.limite}">Límite de crédito:</label><br/>
                 <input type="number" name="limite" th:field="*{credito.limite}" /><br/>      
-                <input type="submit" name="Guardar" value="Guardar" /><br/>      
+                <input type="submit" name="Guardar" th:value="#{accion.guardar}" /><br/>      
             </form>  
         </div>     
         <footer th:replace="layout/plantilla :: footer" />   
