--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 
 <html>
-    <head>  
-    <title>TechShop</title>   
-    <meta charset="UTF-8">   
+    <head th:fragment="head">  
+        <title>TechShop</title>   
+        <meta charset="UTF-8"> 
+        <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>      
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}"/>     
+        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>     
+        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>  
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     </head>
     <body>  
     <header th:fragment="header" class="header">  
-        <nav class="nav">           
-            <a th:href="@{/}" class="logo nav-link">TechShop</a>        
-            <ul class="nav-menu">                
-                <li class="nav-menu-item">       
-                    <a th:href="@{/cliente/listado}" class="nav-menu-link nav-link">Clientes</a>      
-                </li>     
-                
-                <li class="nav-menu-item">                     
-                    <a th:href="@{/categoria/listado}" class="nav-menu-link nav-link">Categorias</a> 
-                </li>        
-                <li class="nav-menu-item">     
-                    <a th:href="@{/articulo/listado}" class="nav-menu-link nav-link">Articulos</a>    
-                </li>          
-            </ul>           
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">           
+            <div class="container">
+                <a th:href="@{/}" class="navbar-brand">TechShop</a>       
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav">                
+                        <li class="nav-item px-2">       
+                            <a th:href="@{/cliente/listado}" class="nav-menu-link nav-link"
+                               th:text="#{plantilla.clientes}">Clientes</a>      
+                        </li>                 
+                        <li class="nav-item px-2">                     
+                            <a th:href="@{/categoria/listado}" class="nav-menu-link nav-link"
+                               th:text="#{plantilla.categorias}">Categorias</a> 
+                        </li>        
+                        <li class="nav-item px-2">     
+                            <a th:href="@{/articulo/listado}" class="nav-menu-link nav-link"
+                               th:text="#{plantilla.articulos}">Articulos</a>    
+                        </li>           
+                    </ul>     
+                </div>
+            </div>      
         </nav>      
     </header>    
         
     <footer th:fragment="footer" class="footer">        
-        <p style="font-size: 20px;">&COPY; Derechos Reservados 2023</p>   
+        <p>&COPY;[[#{plantilla.derechos}]]
+            <a th:href="@{/(lang=es)}">ES</a>
+            <a th:href="@{/(lang=en)}">EN</a>
+        </p>   
     </footer>   
     </body>
 </html>
