--- a/src/main/resources/templates/articulo/listado.html
+++ b/src/main/resources/templates/articulo/listado.html
@@ -2,44 +2,14 @@
 
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TechShop</title>   
-        <meta charset="UTF-8"> 
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/> 
+    <head th:replace="layout/plantilla :: head">
+        <title>TechShop</title>
     </head>
     <body> 
-        <header th:replace="layout/plantilla :: header"/>    
-        <div class="contenido">       
-            <br/>
-            <h2 th:text="#{articulo.titulo}">Listado de Articulos</h2> 
-            <br/> 
-            <a th:href="@{/articulo/nuevo}" th:text="#{articulo.nuevo}">Nuevo Articulo</a>           
-            <div th:if="${articulos != null and !articulos.empty}"> 
-                <table border="1">                
-                    <thead>  
-                        <tr>
-                            <th th:text="#{articulo.descripcion}">Descripcion</th>     
-                            <th th:text="#{articulo.precio}">Precio</th>  
-                            <th th:text="#{articulo.existencias}">Existencias</th>     
-                            <th th:text="#{articulo.activo}">Activo</th>  
-                        </tr>        
-                    </thead>            
-                    <tbody>            
-                        <tr th:each="articulo : ${articulos}">    
-                            <td th:text="${articulo.descripcion}"></td>      
-                            <td th:text="${#numbers.formatDecimal(articulo.precio,3,2)}" style="text-align: right"></td>  
-                            <td th:text="${articulo.existencias}" style="text-align: center"></td>     
-                            <td><input type="checkbox" name="activo" th:checked="${articulo.activo}" disabled="true"></td>
-                            <td><a th:href="@{/articulo/modificar/} + ${articulo.idArticulo}" th:text="#{accion.actualizar}">Actualizar</a></td>
-                            <td><a th:href="@{/articulo/eliminar/} + ${articulo.idArticulo}" th:text="#{accion.eliminar}">Eliminar</a></td>
-                        </tr>  
-                    </tbody>         
-                </table>         
-            </div>       
-            <div th:if="${articulos == null or articulos.empty}"> 
-                <p th:text="#{articulo.no_mostrar}">No tenemos articulos que mostrar...</p>
-            </div>     
-        </div>     
-        <footer th:replace="layout/plantilla :: footer" />   
+        <header th:replace="layout/plantilla :: header" />
+        <section th:replace="articulo/fragmentosArticulo :: botonesAgregar"/>
+        <section th:replace="articulo/fragmentosArticulo :: agregarArticulo"/> 
+        <section th:replace="articulo/fragmentosArticulo :: listadoArticulo"/>
+        <footer th:replace="layout/plantilla :: footer" />
     </body>
 </html>
