--- a/src/main/resources/templates/categoria/modificar.html
+++ b/src/main/resources/templates/categoria/modificar.html
@@ -2,33 +2,12 @@
 
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
-
-    <head>
-        <title>TechShop</title>   
-        <meta charset="UTF-8"> 
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/> 
+    <head th:replace="layout/plantilla :: head">
+        <title>TechShop</title>
     </head>
-    <body> 
-        <header th:replace="layout/plantilla :: header"/>    
-        <div class="contenido">       
-            <h2 th:text="#{categoria.titulo}">Datos de Categoría</h2>
-            <br/>
-            <a th:href="@{/categoria/listado}" th:text="#{accion.regresar}">Regresar</a>
-            <br/>
-            <br/>
-            <form th:action="@{/categoria/guardar}"
-                  method="POST"
-                  th:object="${categoria}">
-                <input type="hidden" name="idCategoria" th:field="*{idCategoria}" />
-                <label for="descripcion" th:text="#{categoria.descripcion}">Descripcion:</label><br/> 
-                <input type="text" name="descripcion" th:field="*{descripcion}" /><br/>  
-                <br/>
-                <label for="activo" th:text="#{categoria.activo}">Activo:</label><br/> 
-                <input type="checkbox" name="activo" th:field="*{activo}"/><br/> 
-                <br/><br/>
-                <input type="submit" name="guardar" th:value="#{accion.guardar}"/><br/> 
-            </form>  
-        </div>    
-        <footer th:replace="layout/plantilla :: footer" />   
-        </body>
+    <body>
+        <header th:replace="layout/plantilla :: header" />
+        <section th:replace="categoria/fragmentosCategoria :: editarCategoria"/> 
+        <footer th:replace="layout/plantilla :: footer" />
+    </body>
 </html>
