--- a/src/main/resources/templates/cliente/buscar.html
+++ b/src/main/resources/templates/cliente/buscar.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"> 
-    <head> 
-         <title>TechShop</title>   
-        <meta charset="UTF-8"> 
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/> 
-    </head> 
+    <head th:replace="layout/plantilla :: head">
+        <title>TechShop</title>
+    </head>
     <body> 
             <header th:replace="layout/plantilla :: header"/>   
             <br/>
