--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -2,50 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
 
-    <head>
-        <title>TechShop</title>   
-        <meta charset="UTF-8"> 
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/> 
+     <head th:replace="layout/plantilla :: head">
+        <title>TechShop</title>
     </head>
     <body> 
-        <header th:replace="layout/plantilla :: header"/>    
-        <div class="contenido">       
-            <br/>
-            <h2 th:text="#{cliente.titulo}">Listado de clientes</h2> 
-            <br/> 
-            <a th:href="@{/cliente/nuevo}" th:text="#{cliente.nuevo}">Nuevo Cliente</a>
-            <a th:href="@{/cliente/buscar}" th:text="#{accion.listar}">Listar Cliente</a>           
-            <div th:if="${clientes != null and !clientes.empty}"> 
-                <table border="1">                
-                    <thead>      
-                        <tr>
-                            <th th:text="#{cliente.nombre}">Nombre</th>     
-                            <th th:text="#{cliente.apellidos}">Apellidos</th>  
-                            <th th:text="#{cliente.correo}">Correo</th>     
-                            <th th:text="#{cliente.telefono}">Teléfono</th>  
-                            <th th:text="#{cliente.limite}">Límite</th>    
-                            <th th:text="#{accion.eliminar}">Eliminar</th>    
-                            <th th:text="#{accion.actualizar}">Actualizar</th>  
-                        </tr>
-                    </thead>            
-                    <tbody>            
-                        <tr th:each="cliente : ${clientes}">    
-                            <td th:text="${cliente.nombre}"></td>     
-                            <td th:text="${cliente.apellidos}"></td>  
-                            <td th:text="${cliente.correo}"></td>       
-                            <td th:text="${cliente.telefono}"></td>          
-                            <td th:text="${#numbers.formatDecimal(cliente.credito.limite, 3, 2)}" style="text-align: right"></td>       
-                            <td><a th:href="@{/cliente/eliminar/} + ${cliente.idCliente}" th:text="#{accion.eliminar}">Eliminar</a></td>  
-                            <td><a th:href="@{/cliente/modificar/} + ${cliente.idCliente}" th:text="#{accion.actualizar}">Actualizar</a></td>  
-                        </tr>  
-                    </tbody>         
-                </table>         
-            </div>       
-            <div th:if="${clientes == null or clientes.empty}">      
-                <p th:text="#{cliente.no_mostrar}">No hay clientes</p>
-            </div>     
-        </div>     
-        <footer th:replace="layout/plantilla :: footer" />   
+     <header th:replace="layout/plantilla :: header" />
+
+     <section th:replace="cliente/fragmentosCliente :: botonesAgregar"/>
+     <section th:replace="cliente/fragmentosCliente :: agregarCliente"/> 
+     <section th:replace="cliente/fragmentosCliente :: listadoClientes"/>
+     <footer th:replace="layout/plantilla :: footer" />
+
     </body>
 </html>
 
