--- a/src/main/resources/templates/cliente/modificar.html
+++ b/src/main/resources/templates/cliente/modificar.html
@@ -1,37 +1,13 @@
-<!DOCTYPE html>
-
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml"> 
-    <head>
-        <title>TechShop</title>   
-        <meta charset="UTF-8"> 
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/> 
+<!DOCTYPE HTML>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://wwww.thymeleaf.org" 
+      xmlns:sec="http://thymeleaft.org/extras/spring-security">
+    <head th:replace="layout/plantilla :: head">
+        <title>TechShop</title>
     </head>
-    <body> 
-        <header th:replace="layout/plantilla :: header"/>    
-        <div class="contenido">       
-            <h2 th:text="#{cliente.datos}">Datos del cliente</h2>
-            <br/>
-            <a th:href="@{/cliente/listado}" th:text="#{accion.regresar}">Regresar</a>
-            <br/>
-            <br/>
-            <form th:action="@{/cliente/guardar}"
-                  method="POST"
-                  th:object="${cliente}">
-                <input type="hidden" name="idCliente" th:field="*{idCliente}" />
-                <label for="nombre" th:text="#{cliente.nombre}">Nombre:</label><br/> 
-                <input type="text" name="nombre" th:field="*{nombre}" /><br/>        
-                <label for="apellidos" th:text="#{cliente.apellidos}">Apellidos:</label><br/>           
-                <input type="text" name="apellidos" th:field="*{apellidos}" /><br/>  
-                <label for="correo" th:text="#{cliente.correo}">Correo:</label><br/>
-                <input type="email" name="correo" th:field="*{correo}" /><br/>      
-                <label for="telefono" th:text="#{cliente.telefono}">Telefono:</label><br/>
-                <input type="tel" name="telefono" th:field="*{telefono}" /><br/>      
-                <label for="limite" th:text="#{cliente.limite}">Límite de crédito:</label><br/>
-                <input type="number" name="limite" th:field="*{credito.limite}" /><br/>      
-                <input type="submit" name="Guardar" th:value="#{accion.guardar}" /><br/>      
-            </form>  
-        </div>     
-        <footer th:replace="layout/plantilla :: footer" />   
-      </body>
+    <body>
+        <header th:replace="layout/plantilla :: header" />
+        <section th:replace="cliente/fragmentosCliente :: editarCliente"/> 
+        <footer th:replace="layout/plantilla :: footer" />
+    </body>
 </html>
