--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://wwww.thymeleaf.org" 
+      xmlns:sec="http://thymeleaft.org/extras/spring-security">
     <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
     </head>
     <body>
-      <header th:replace="layout/plantilla :: header" />
-      <div class="contenido">
-           <h2 th:text="#{index.titulo}">Nuestros Articulos</h2>
-           <br/>
-           <div th:if="${articulos != null and !articulos.empty}">   
-               <table border="1">
-                   <thead>
-                       <tr>
-                           <th th:text="#{articulo.descripcion}">Descripción</th>
-                           <th th:text="#{articulo.precio}">Precio</th>
-                           <th th:text="#{articulo.comprar}">Comprar</th>
-                       </tr>
-                   </thead>
-                   <tbody>
-                       <tr th:each="articulo: ${articulos}">
-                           <td th:text="${articulo.descripcion}"></td>
-                           <td th:text="${articulo.precio}"></td>
-                           <td><a th:href="@{/carrito/agregar/} + ${articulo.idArticulo}" th:text="#{accion.agregar}">Agregar</a></td>
-                       </tr>
-                   </tbody> 
-               </table>
+        <header th:replace="layout/plantilla :: header"/>
+        <div class="container">
+            <h2 th:text="#{index.titulo}">Nuestros Articulos</h2>            
+            <div class="row row-cols-3" th:if="${articulos != null and !articulos.empty}">
+                <div class="card" th:each="articulo : ${articulos}" >
+               <!--     <img src="/images/equipo1.jpg" class="card-img-top" alt="equipo">  -->
+                    <div class="card-body">
+                        <h5 class="card-title">[[${articulo.descripcion}]]</h5>
+                        <h6 class="card-subtitle mb-2 text-muted text-end">[[${new java.text.DecimalFormat('¢#,##0.00').format(articulo.precio)}]]</h6>
+                        <a class="card-link" th:href="@{/carrito/agregar/} + ${articulo.idArticulo}">[[#{articulo.comprar}]]</a>
+                        <p class="card-text">[[${articulo.detalle}]]</p>                        
+                    </div>
+                </div>                
             </div>
-            <div th:if="${articulos == null or articulos.empty}">
-                <p th:text="#{articulo.no_mostrar}">No hay articulos</p>
+            <div th:if="${articulos == null or articulos.empty}"  th:text="#{articulo.no_mostrar}">
+                No tenemos lista de articulos que mostrar...
             </div>
         </div>
-      <footer th:replace="layout/plantilla :: footer">
+        <footer th:replace="layout/plantilla :: footer"/>
     </body>
 </html>
