--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -11,39 +11,70 @@
         <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     </head>
     <body>  
-    <header th:fragment="header" class="header">  
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">           
-            <div class="container">
-                <a th:href="@{/}" class="navbar-brand">TechShop</a>       
-                <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav">                
-                        <li class="nav-item px-2">       
-                            <a th:href="@{/cliente/listado}" class="nav-menu-link nav-link"
-                               th:text="#{plantilla.clientes}">Clientes</a>      
-                        </li>                 
-                        <li class="nav-item px-2">                     
-                            <a th:href="@{/categoria/listado}" class="nav-menu-link nav-link"
-                               th:text="#{plantilla.categorias}">Categorias</a> 
-                        </li>        
-                        <li class="nav-item px-2">     
-                            <a th:href="@{/articulo/listado}" class="nav-menu-link nav-link"
-                               th:text="#{plantilla.articulos}">Articulos</a>    
-                        </li>           
-                    </ul>     
+    <body>
+        <header th:fragment="header" class="header">
+            <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
+                <div class="container">
+                    <a th:href="@{/}" class="navbar-brand">TechShop</a>
+                    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarCollapse">
+                        <ul class="navbar-nav" sec:authorize="hasRole('ROLE_VENDEDOR')">
+                            <li class="nav-item px-2">
+                                <a th:href="@{/cliente/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.clientes}">Clientes</a>
+                            </li>
+                            <li class="nav-item px-2">
+                                <a th:href="@{/categoria/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.categorias}">Categorias</a>
+                            </li>
+                            <li class="nav-item px-2">
+                                <a th:href="@{/articulo/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.articulos}">Articulos</a>
+                            </li>
+                        </ul>
+                        <ul sec:authorize="isAuthenticated()" class="navbar-nav ml-auto">
+                            <li class="nav-item mr-3">
+                                <a href="#" class="nav-link">
+                                    <i class="fas fa-user"></i>
+                                    <span th:text="#{plantilla.bienvenido}">Bievenido:</span>
+                                    <span sec:authentication="name">Usuario</span>
+                                </a>
+                            </li>
+                            <li class="nav-item mr-3">
+                                <a href="#" class="nav-link">
+                                    <span th:text="#{plantilla.troles}">Roles:</span>
+                                    <span sec:authentication="principal.authorities">XXX</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <form method="POST" th:action="@{/logout}">
+                                    <a href="#" onclick="this.parentNode.submit();" class="nav-link">
+                                        <i class="fas fa-user-times"></i> [[#{plantilla.logout}]] </a>
+                                </form>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>      
-        </nav>      
-    </header>    
-        
-    <footer th:fragment="footer" class="footer">        
-        <p>&COPY;[[#{plantilla.derechos}]]
-            <a th:href="@{/(lang=es)}">ES</a>
-            <a th:href="@{/(lang=en)}">EN</a>
-        </p>   
-    </footer>   
+            </nav>
+            <section id="main-header" class="py-2 bg-success text-white">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h1>
+                                <i class="fas fa-cog"></i> [[#{plantilla.titulo}]]
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </header>
+        <footer th:fragment="footer" class="position-fixed bottom-0 start-0 end-0 bg-info text-white mt-5 p-2">
+            <div class="container">
+                <div class="col">
+                    <p class="lead text-center"> &COPY [[#{plantilla.derechos}]] <a th:href="@{/(lang=es)}">ES</a> | <a th:href="@{/(lang=en)}">EN</a>
+                    </p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
 
