--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,12 +12,17 @@
             <div class="row row-cols-3" th:if="${articulos != null and !articulos.empty}">
                 <div class="card" th:each="articulo : ${articulos}" >
                <!--     <img src="/images/equipo1.jpg" class="card-img-top" alt="equipo">  -->
-                    <div class="card-body">
-                        <h5 class="card-title">[[${articulo.descripcion}]]</h5>
-                        <h6 class="card-subtitle mb-2 text-muted text-end">[[${new java.text.DecimalFormat('¢#,##0.00').format(articulo.precio)}]]</h6>
-                        <a class="card-link" th:href="@{/carrito/agregar/} + ${articulo.idArticulo}">[[#{articulo.comprar}]]</a>
-                        <p class="card-text">[[${articulo.detalle}]]</p>                        
-                    </div>
+               <div class="card-body">
+                   <h5 class="card-title">[[${articulo.descripcion}]]</h5>
+                   <h6 class="card-subtitle mb-2 text-muted text-end">¢[[${#numbers.formatDecimal(articulo.precio, 1, 'DEFAULT', 2, 'DEFAULT')}]]</h6>
+                   <figure>
+                       <img th:src="@{${articulo.rutaImagen}}" height="150" />
+                       <figcaption>
+                           <a class="card-link" th:href="@{/carrito/agregar/} + ${articulo.idArticulo}">[[#{articulo.comprar}]]</a>
+                       </figcaption>
+                   </figure>
+                   <p class="card-text">[[${articulo.detalle}]]</p>
+               </div>
                 </div>                
             </div>
             <div th:if="${articulos == null or articulos.empty}"  th:text="#{articulo.no_mostrar}">
@@ -27,3 +32,4 @@
         <footer th:replace="layout/plantilla :: footer"/>
     </body>
 </html>
+
