--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-
 <html>
-    <head th:fragment="head">  
-        <title>TechShop</title>   
-        <meta charset="UTF-8"> 
-        <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>      
-        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}"/>     
-        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>     
-        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>  
+    <head th:fragment="head">
+        <title>TechShop</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}"/>
+        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
         <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     </head>
-    <body>  
     <body>
         <header th:fragment="header" class="header">
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
@@ -22,13 +20,16 @@
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <ul class="navbar-nav" sec:authorize="hasRole('ROLE_VENDEDOR')">
                             <li class="nav-item px-2">
-                                <a th:href="@{/cliente/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.clientes}">Clientes</a>
+                                <a th:href="@{/cliente/listado}" class="nav-menu-link nav-link"
+                                   th:text="#{plantilla.clientes}">Clientes</a>
                             </li>
                             <li class="nav-item px-2">
-                                <a th:href="@{/categoria/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.categorias}">Categorias</a>
+                                <a th:href="@{/categoria/listado}" class="nav-menu-link nav-link"
+                                   th:text="#{plantilla.categorias}">Categorias</a>
                             </li>
                             <li class="nav-item px-2">
-                                <a th:href="@{/articulo/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.articulos}">Articulos</a>
+                                <a th:href="@{/articulo/listado}" class="nav-menu-link nav-link"
+                                   th:text="#{plantilla.articulos}">Articulos</a>
                             </li>
                         </ul>
                         <ul sec:authorize="isAuthenticated()" class="navbar-nav ml-auto">
@@ -48,9 +49,16 @@
                             <li class="nav-item">
                                 <form method="POST" th:action="@{/logout}">
                                     <a href="#" onclick="this.parentNode.submit();" class="nav-link">
-                                        <i class="fas fa-user-times"></i> [[#{plantilla.logout}]] </a>
+                                        <i class="fas fa-user-times"></i> [[#{plantilla.logout}]]
+
+                                    </a>
                                 </form>
                             </li>
+                        </ul>
+                        <ul class="navbar-nav" sec:authorize="!isAuthenticated()">
+                            <li class="nav-item">
+                                <a class="nav-link" th:href="@{/login}"><i class="fas fa-sign-in-alt"></i></a>
+                            </li>                            
                         </ul>
                     </div>
                 </div>
@@ -61,6 +69,7 @@
                         <div class="col-md-6">
                             <h1>
                                 <i class="fas fa-cog"></i> [[#{plantilla.titulo}]]
+
                             </h1>
                         </div>
                     </div>
@@ -70,12 +79,15 @@
         <footer th:fragment="footer" class="position-fixed bottom-0 start-0 end-0 bg-info text-white mt-5 p-2">
             <div class="container">
                 <div class="col">
-                    <p class="lead text-center"> &COPY [[#{plantilla.derechos}]] <a th:href="@{/(lang=es)}">ES</a> | <a th:href="@{/(lang=en)}">EN</a>
+                    <p class="lead text-center">
+                        &COPY [[#{plantilla.derechos}]]
+
+                        <a th:href="@{/(lang=es)}">ES</a> | 
+
+                        <a th:href="@{/(lang=en)}">EN</a>
                     </p>
                 </div>
             </div>
         </footer>
     </body>
 </html>
-
-//Las plantillas funcionan para generar un diseño en específico y poder usarlas después en otras partes de la página.
